plugins {
    id 'java'
    // Usamos la 3.4.3 que es más estable con Gradle 9
    id 'org.springframework.boot' version '3.4.3' 
    // Esta versión (1.1.7) es la que corrige el error que te ha salido
    id 'io.spring.dependency-management' version '1.1.7' 
    id 'jacoco' // Para generar reportes de cobertura de tests
}

group = 'com.mycompany'
version = '0.0.1-SNAPSHOT'

// ¡FUNDAMENTAL! Le dice a Gradle que descargue las librerías de los servidores de Maven
repositories {
    mavenCentral()
}

// Configuración para la clase principal (HU #6)
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// Necesario para Spring Boot 3 / Spring 6: preserva los nombres de parámetros en el bytecode
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-parameters']
}

dependencies {
    // Web para hacer los controladores (API REST)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    
    // JPA para la base de datos y anotaciones @Entity
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    
    // Base de datos en memoria (H2)
    runtimeOnly 'com.h2database:h2'
    
    // Para los tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    dependsOn test // El informe se genera después de los tests
    reports {
        xml.required = true
        html.required = true // Esto es lo que genera la carpeta 'html'
    }
}

//Esto hace que el informe se genere automáticamente al lanzar 'test'
test {
    finalizedBy jacocoTestReport 
}
